--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!--android:name=".feature_room.data.EntryApplication"-->
+    <!--android:name=".feature_dagger_hilt_vm.MyApp"-->
     <application
-        android:name=".feature_room.data.EntryApplication"
+        android:name=".feature_dagger_hilt_vm.MyApp"
         android:enableOnBackInvokedCallback="true"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -15,7 +17,7 @@
         android:theme="@style/Theme.MyRoomSession"
         tools:targetApi="tiramisu">
         <activity
-            android:name=".MainActivity"
+            android:name=".feature_dagger_hilt_vm.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.MyRoomSession">
