--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <!--android:name=".feature_dictionary.DictionaryApp"-->
 
     <application
-        android:name=".feature_cryptocurency_app.CoinApplication"
+        android:name=".feature_landing_page.MyStarterAppsApplication"
         android:enableOnBackInvokedCallback="true"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -25,7 +25,7 @@
         android:theme="@style/Theme.MyRoomSession"
         tools:targetApi="tiramisu">
         <activity
-            android:name=".feature_cryptocurency_app.presentation.MainActivity"
+            android:name=".feature_landing_page.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.MyRoomSession">
