Realised that some features are not made equally the ones  that are not hilt can't share an application and main

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,13 +22,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyRoomSession"
+        android:theme="@style/Theme.MyStarterApps"
         tools:targetApi="tiramisu">
         <activity
             android:name=".feature_landing_page.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MyRoomSession">
+            android:theme="@style/Theme.MyStarterApps">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
